<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F7F6F6"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:gravity="center"
            android:orientation="vertical">


            <ImageView
                android:scaleType="centerCrop"
                android:layout_width="220dp"
                android:layout_height="250dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center"
                android:src="@drawable/esseprso_logo" />

            <TextView
                android:visibility="gone"
                android:id="@+id/statusTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:padding="6dp"
                android:layout_margin="2dp"
                android:textStyle="bold"
                android:background="@drawable/correct_round"
                android:layout_gravity="center"
                android:gravity="center"
                tools:text="Correct info" />

            <EditText
                android:layout_margin="10dp"
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="Email"
                android:textColor="#000" />

            <EditText
                android:layout_margin="10dp"
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword"
                android:textColor="#000" />


            <Button
                android:id="@+id/loginBTN"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/rounded_button"
                android:padding="10dp"
                android:paddingEnd="22dp"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:paddingStart="30dp"
                android:text="Login"
                android:textColor="#fff" />


            <ProgressBar
                android:id="@+id/loadingPB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>

